XIVY-18367 improve default mail templates
Somewhere between old Outlook versions 2502 and 2510, something in the rendering engine changed that made the `v:roundrect` no longer respect the `width` and `height` attributes.
For that reason, the template has been reworked and improved:
- Unify the template as much as possible instead of relying on different elements for the old Outlook client using `<!--[if mso]>`
- Don't use descendent selectors in CSS as they are not rendered consistently in the new Outlook Windows app.
- Since we don't use `v:roundrect` with fixed dimensions anymore, the buttons sizes properly adjust to their content in case of localization.

With this, the template is much simpler and should be more robust going forward.
The only downside is that in the old Outlook client, the buttons no longer have rounded corners. ¯\_(ツ)_/¯

--- a/system-cms/cms/Notification/business/Templates/Default/mail/Content.html
+++ b/system-cms/cms/Notification/business/Templates/Default/mail/Content.html
@@ -20,43 +20,19 @@
           <%= ivy.case == null ? "" : String.format("
           <table>
             <tbody>
-              <tr class=\"actions\">
-                <td class=\"case-details-action\">
-                  <!--[if !mso]> <!-->
-                  <div>
-                    <img
-                      src=\"%1$s\"
-                      height=\"12\"
-                    />
-                    <a href=\"%2$s\">
-                      %3$s
-                    </a>
-                  </div>
-                  <!-- <![endif]-->
-                  <!--[if mso]>
-                  <v:roundrect
-                    xmlns:v=\"urn:schemas-microsoft-com:vml\"
-                    xmlns:w=\"urn:schemas-microsoft-com:office:word\"
-                    href=\"%2$s\"
-                    style=\"height: 28px; width: 103px;\"
-                    strokecolor=\"none\"
-                    fillcolor=\"#D8D9D9\"
-                  >
-                    <table>
-                      <tr>
-                        <td>
-                          <img
-                            src=\"%1$s\"
-                            height=\"12\"
-                          />
-                        </td>
-                        <td align=\"right\">
-                          %3$s
-                        </td>
-                      </tr>
-                    </table>
-                  </v:roundrect>
-                  <![endif]-->
+              <tr>
+                <td>
+                  <table>
+                    <tr>
+                      <td class=\"actions-table-td\" bgcolor=\"#d8d9d9\">
+                        <a href=\"%2$s\">
+                          <img src=\"%1$s\" height=\"12\"/>
+                          <!--[if mso]>&nbsp;<![endif]-->
+                          <span class=\"case-details-action-span\">%3$s</span>
+                        </a>
+                      </td>
+                    </tr>
+                  </table>
                 </td>
               </tr>
             </tbody>
