XIVY-18367 improve task detail table layout

--- a/system-cms/cms/Notification/new-task/Templates/Default/mail/Resources/Style.css
+++ b/system-cms/cms/Notification/new-task/Templates/Default/mail/Resources/Style.css
@@ -33,10 +33,13 @@ th {
   text-align: left;
   white-space: nowrap;
   padding: 0 30px 10px 0;
+  vertical-align: top;
 }
 
 .task-details-td {
   color: #585656;
+  padding-bottom: 10px;
+  vertical-align: top;
 }
 
 .start-task-action-td {
